# webapp

./: .babelrc  .env  .eslintrc.cjs  .eslintrc.json  .gitignore  CODE_REVIEW_SUMMARY.md  Dockerfile  PrivacyPolicyRussian  README.md  REQUEST_DETAILS_PAGE_CHANGES.md  Saayam Website Hindi Localization  buildspec.yml  carousel.jsx  codecov.yml  components.json  e --short HEAD  helpRequest.jsx  hindi_keys.txt  i18next-scanner.config.cjs  index.html  jest.config.cjs  jest.config.js  jsconfig.json  nightwatch.conf.cjs  nightwatch.conf.mjs  package-lock.json  package.json  playwright.config.js  sonar-project.properties  tailwind.config.js  tsconfig.json  vite.config.js
.github/: CODEOWNERS
__mocks__/: fileMock.js  fileTransformer.cjs  fileTransformer.js  i18next.js  react-i18next.js  react-router-dom.jsx
coverage/: clover.xml  coverage-final.json  lcov.info
e2e-tests/: README.md  conftest.py  report.html  requirements.txt
init/: pageLoads.cjs
playwright-report/: index.html
public/: cb-base64-string.txt  test-manual.html
sample-fastapi/: .dockerignore  Dockerfile  gunicorn.conf.py  pyproject.toml  requirements.txt
sample-fastapi/sample_fastapi/: server.py
sample-fastapi/sample_fastapi/routers/: health.py
sample-fastapi/scripts/: run.sh
sample-fastapi/tests/: test_root.py
src/: App.jsx  authResponseHandler.jsx  babel.config.js  cognitoConfig.jsx  config.ts  content.ts  footer.html  index.css  jest.config.js  main.jsx  setupTests.js  theme.ts
test/: basic.js  duckDuckGo.js
test-results/: .last-run.json
tests-examples/: demo-todo-app.spec.js
(+934 files in other folders)
